# rodan-notifications

./: .dockerignore  Cargo.toml  Dockerfile  README.md  sample.config.toml
.github/workflows/: ghcr.yml
src/: lib.rs  main.rs
src/config/: app.rs  mod.rs  server.rs
src/events/: mod.rs
src/kafka/: mod.rs
src/responses/: mod.rs  types.rs
src/router/: mod.rs
src/router/handlers/: events.rs  ingester.rs  mod.rs  sse.rs
src/utils/: mod.rs
src/utils/auth/: auth.rs
src/utils/events/: array.rs  event.rs  logging.rs  mod.rs
src/utils/logging/: batch.rs  flush.rs  mod.rs  rotate.rs
src/utils/middlewares/: auth.rs  cors.rs  log.rs
src/utils/values/: config.rs  events.rs
tests/: e2e.rs
