[package]
name = "rodan-sse"
version = "0.0.1"
edition = "2024"
authors = ["intraware"]
description = "A microservice for rodan"

[dependencies]
actix-web = "4.11.0"
arc-swap = "1.7.1"
chrono = "0.4.42"
env_logger = "0.11.8"
futures-util = "0.3.31"
jsonwebtoken = "9.3.1"
log = "0.4.28"
once_cell = "1.21.3"
serde = "1.0.225"
serde_json = "1.0.145"
sha2 = "0.10.9"
sha256 = "1.6.0"
tokio = { version = "1.47.0", features = ["fs", "macros"] }
toml = "0.9.7"
