[package]
name = "rodan-sse"
version = "0.0.4"
edition = "2024"
authors = ["intraware"]
description = "A microservice for rodan"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.11.0"
arc-swap = "1.7.1"
chrono = { version = "0.4.42", features = ["serde"] }
env_logger = "0.11.8"
futures-util = "0.3.31"
humantime-serde = "1.1.1"
jsonwebtoken = "9.3.1"
log = "0.4.28"
once_cell = "1.21.3"
rand = "0.9.2"
serde = "1.0.225"
serde_json = "1.0.145"
sha2 = "0.10.9"
sha256 = "1.6.0"
tokio = { version = "1.47.0", features = ["fs", "macros"] }
toml = "0.9.7"

[dev-dependencies]
serial_test = "2"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.47.0", features = ["full"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
hex = "0.4"
